--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
     defaultConfig {
-        applicationId "com.trafi.istorijos"
+        applicationId "lt.gyvosistorijos"
         minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
