Store fetched stories to SQLite DB. Sync stories on every cold launch. Primitive support for offline use if stories were previously synced at least once.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,16 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.squareup.sqldelight:gradle-plugin:0.4.4'
+    }
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.squareup.sqldelight'
 
 android {
     compileSdkVersion 24
