--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ android {
 }
 
 ext {
-    firebaseVersion = '9.8.0'
+    playServicesVersion = '9.8.0'
     retrofitVersion = '2.1.0'
     supportVersion = '25.0.0'
     okHttpVersion = '3.4.2'
@@ -83,9 +83,11 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.bluelinelabs:conductor:2.0.4'
 
-    compile "com.google.firebase:firebase-core:$firebaseVersion"
-    compile "com.google.firebase:firebase-messaging:$firebaseVersion"
-    compile "com.google.firebase:firebase-crash:$firebaseVersion"
+    compile "com.google.android.gms:play-services-location:$playServicesVersion"
+
+    compile "com.google.firebase:firebase-core:$playServicesVersion"
+    compile "com.google.firebase:firebase-messaging:$playServicesVersion"
+    compile "com.google.firebase:firebase-crash:$playServicesVersion"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 }
