--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.squareup.sqldelight'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion="25.0.0"
     defaultConfig {
         applicationId "lt.gyvosistorijos"
         minSdkVersion 19
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 3
         versionName "0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -54,7 +54,7 @@ android {
 ext {
     firebaseVersion = '9.6.1'
     retrofitVersion = '2.1.0'
-    supportVersion = '24.2.1'
+    supportVersion = '25.0.0'
     okHttpVersion = '3.4.1'
 }
 
