--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'com.squareup.sqldelight'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    buildToolsVersion="25.0.0"
     defaultConfig {
         applicationId "lt.gyvosistorijos"
         minSdkVersion 19
