--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "com.android.support:appcompat-v7:$supportVersion"
+    compile "com.android.support:support-annotations:$supportVersion"
     testCompile 'junit:junit:4.12'
 
     compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
