--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     compile "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.bluelinelabs:conductor:2.0.4'
+    compile 'com.jakewharton.timber:timber:4.3.1'
+
 
     compile "com.google.android.gms:play-services-location:$playServicesVersion"
 
