--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.squareup.sqldelight:gradle-plugin:0.5.1'
+        classpath "io.realm:realm-gradle-plugin:2.2.0"
     }
 }
 
@@ -14,7 +14,7 @@ plugins {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.squareup.sqldelight'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
